# mcp-external-memory

./: .bumpversion.cfg  CHANGELOG.md  README.md  SPEC.md  install_skill.py  mcp.json  opencode.json  pyproject.toml  server.json
.github/workflows/: ci.yml  pypi-publish.yml
scripts/: install_skill.py
skills/external-memory/: SKILL.md
src/mcp_external_memory/: __init__.py  __main__.py  embeddings.py  server.py  storage.py  tools.py
tests/: conftest.py  test_server.py
