[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-external-memory"
version = "0.1.0"
description = "An MCP server that gives LLMs persistent, searchable semantic memory"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "mcp>=1.4.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
    "lz4>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "mypy",
]
all = ["mcp-external-memory[dev,test,lint]"]
cli = [
    "click>=8.0",
]

[project.scripts]
mcp-external-memory = "mcp_external_memory.__main__:main"

[project.urls]
Homepage = "https://github.com/your-name/mcp-external-memory"
Repository = "https://github.com/your-name/mcp-external-memory"
Issues = "https://github.com/your-name/mcp-external-memory/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_external_memory"]

[tool.hatch.build.targets.sdist]
include = ["src/mcp_external_memory"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501", "ANN201", "ANN001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN201", "ANN001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
src = ["src"]
tests = ["tests"]
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py", "**/__main__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "async def memory_",  # MCP tool functions require FastMCP context
    "class OpenAIEmbedder",  # requires OPENAI_API_KEY env var
    "class OllamaEmbedder",  # requires Ollama server running
]